# techradar-agent

./: .env.example  .gitignore  README.md  pyproject.toml  sources.yaml
.claude/: mcp.json
docs/: DESIGN.md  EVALUATION.md  sample_brief.md
scripts/: seed_demo.sh
techradar/: __init__.py  cli.py  config.py  db.py  schema.py
techradar/agent/: __init__.py  llm.py  research_agent.py  web_fallback.py
techradar/eval/: __init__.py  harness.py  queries.yaml
techradar/ingest/: __init__.py  arxiv.py  base.py  dedupe.py  federal_register.py  github_releases.py  nerc.py  osti.py  staleness.py
techradar/mcp_server/: __init__.py  server.py
techradar/rag/: __init__.py  chunking.py  embedding.py  index.py  retrieval.py
tests/: test_core.py
