[project]
name = "techradar-agent"
version = "0.1.0"
description = "Agentic research system for the energy-systems / AI-infrastructure domain: ingestion pipeline, bucket-scoped RAG, MCP search tool, research agent, and eval harness."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "chromadb>=0.5",
    "fastembed>=0.3",
    "anthropic>=0.40",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["techradar*"]
